feat: add resource edit route
